<resources>
    <string name="app_name">Agrogest</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password muy corto al menos 6 caracteres</string>
    <string name="auth_failed">Error en la autenticación, comprueba mail y contraseña o registrese</string>
    <string name="change_email">Cambiar Email</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="send_password_reset_email">Contraseña enviada, mail reseteado</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">Nueva Contraseña</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Acceder</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Acceder</string>
    <string name="btn_link_to_register">Pantalla de registro</string>
    <string name="btn_link_to_login">Ya estoy registrado, acceder</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">¿ha olvidado su contraseña?</string>
    <string name="btn_reset_password">Reset Contraseña</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_finca_list">FincaListActivity</string>
    <string name="menu_logout">Salir</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <!--<string name="estado_fenologico_titulo">Estado Fenológico</string>-->
    <!--<string name="estado_fenologico_2">Se empiezan a ver los pétalos</string>-->
    <!--<string name="estado_fenologico_3">Botón Rosa o Blanco</string>-->
    <!--<string name="estado_fenologico_4">Se ven los Estambres</string>-->
    <!--<string name="estado_fenologico_5">Flor abierta</string>-->
    <!--<string name="estado_fenologico_6">Inicio caída pétalos</string>-->
    <!--<string name="estado_fenologico_1">Se ven los Sépalos (Cáliz)</string>-->
    <!--<string name="estado_fenologico_titulo">Tipo de Precipitación</string>-->
    <!--<string name="estado_fenologico_2">Llovizna</string>-->
    <!--<string name="estado_fenologico_3">Nieve</string>-->
    <!--<string name="estado_fenologico_4">Granizo</string>-->
    <!--<string name="estado_fenologico_5">Neviscas </string>-->
    <!--<string name="estado_fenologico_6">Virga</string>-->
    <!--<string name="estado_fenologico_1">Lluvia</string>-->
    <string name="estado_fenologico_titulo">Tipo de Plaga</string>
    <string name="estado_fenologico_2">Minador de la hoja</string>
    <string name="estado_fenologico_3">Gusanos</string>
    <string name="estado_fenologico_4">Diabróticas</string>
    <string name="estado_fenologico_5">Barrenadores</string>
    <string name="estado_fenologico_6">Mosca Blanca</string>
    <string name="estado_fenologico_1">Picudo</string>
    <string name="default_date_format">dd/MM/yyyy</string>
    <string name="action_ok">ok</string>
    <string name="fenologia">Fenología</string>
    <string name="pluviometria">Pluviometría</string>
    <string name="plagas">Plagas</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
