<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/estado_fenologico_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio">

        <RadioButton
            android:text="@string/estado_fenologico_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:checked="true"/>

        <RadioButton
            android:text="@string/estado_fenologico_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />

        <RadioButton
            android:text="@string/estado_fenologico_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton3"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />

        <RadioButton
            android:text="@string/estado_fenologico_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton4"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />

        <RadioButton
            android:text="@string/estado_fenologico_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />

        <RadioButton
            android:text="@string/estado_fenologico_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton6"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />
    </RadioGroup>
</LinearLayout>